1 July 2014: Wouter
	- Better fix for pidof that sets PATH for networkmanager dispatcher
	  script (from Ondrej Sury).

30 June 2014: Wouter
	- Add --with-pidof=/usr/sbin/pidof where you can set the location
	  of the pidof command to use in the Networkmanager script,
	  /usr/bin/pidof or /usr/sbin/pidof (depending no your distribution).

25 June 2014: Wouter
	- Patches from Pavel Simerda:
	  improve systemctl call.
	  serialize script instances.

23 June 2014: Wouter
	- Patches from Pavel Simerda:
	  Fixup for python2.
	  fix a race condition with NetworkManager restart.
	  don't fail on empty connection list.
	  move legacy connection handling to the cleanup phase.
	  don't block on systemctl restart NetworkManager.

20 June 2014: Wouter
	- Patches from Pavel Simerda:
	  fix bug that prevents calling dnssec-trigger-control
	  submit (https://bugzilla.redhat.com/show_bug.cgi?id=1105896)
	  avoid dependency on pidof
	  handle missing resolv.conf backup gracefully
	  upgrade zone cache format at startup (
	  https://bugzilla.redhat.com/show_bug.cgi?id=1111143)
	  always log to stderr

4 June 2014: Wouter
	- Patch from Pavel Simerda. This, among other things, allows to
	  restart unbound and/or dnssec-trigger without restarting
	  NetworkManager when it's configured not to touch the DNS.
	  And, avoid Filenotfounderror not available in python 2,
	  https://bugzilla.redhat.com/show_bug.cgi?id=1100794
	  And fix unbound output parser
	  https://bugzilla.redhat.com/show_bug.cgi?id=1100796

22 May 2014: Wouter
	- release 0.12.
	- trunk is 0.13 in development.
	- updated authority server addresses builtin to dnssec-trigger for
	  d root server (ipv4) and c root server (ipv6) for its tests.

7 May 2014: Wouter
	- Updated dnssec-trigger-script.in to distinguish secure and
	  insecure zones, and to flush the unbound cache on DNS server
	  list changes. (from Pavel Simerda).

15 April 2014: Wouter
	- Change the ip-address of tcp and ssl service from broer.nlnetlabs.nl