@@ -1,16 +1,0 @@
-[Unit]
-Description=Reconfigure local DNSSEC resolver on connectivity changes
-After=NetworkManager.service unbound.service dnssec-triggerd-keygen.service
-Requires=unbound.service
-Wants=dnssec-triggerd-keygen.service
-
-[Service]
-Type=simple
-Restart=always
-ExecStart=/usr/sbin/dnssec-triggerd -d
-ExecStartPre=-/usr/libexec/dnssec-trigger-script --prepare
-ExecStartPost=-/usr/libexec/dnssec-trigger-script --update
-ExecStopPost=-/usr/libexec/dnssec-trigger-script --cleanup
-
-[Install]
-WantedBy=multi-user.target
